@@ -12,6 +12,10 @@ BUGFIXES
 16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)
 
 IMPROVEMENTS
+22-12-05    PEAR's Translation2 lib integrated which means application interface,
+            navigation and content can now be translated into multiple languages,
+            many thanks to AJ's gargantuan effort here and the patronage of
+            Multithink.com (AJ Tarachanowicz)
 22-12-05    Improvement to the who's online block (Andrey Podshivalov)
 
 
